--- a/src/LotteryGame.css
+++ b/src/LotteryGame.css
@@ -2,13 +2,15 @@
 	display: flex;
 	flex-direction: column;
 	max-width: 960px;
-	align-content: center;
+	min-height: 100vh;
+	justify-content: space-between;
 	margin: 0 auto;
+	padding: 20px;
 }
 
 .LotteryGame-game-container {
 	display: flex;
-	justify-content: space-between;
+	justify-content: space-around;
 }
 
 .LotteryGame-btn {
@@ -21,6 +23,7 @@
 	color: #ffffff;
 	border: none;
 	box-shadow: 2px 2px 3px rgba(33,33,33,0.3);
+	margin-bottom: 40px;
 }
 
 .LotteryGame-btn:focus {
